--- a/style.css
+++ b/style.css
@@ -66,3 +66,39 @@
     .conteiner_caixa{
         margin: 0 6em;
     }
+
+    .secundario__imagem{
+        width: 80%;
+    }
+
+    .secundario__imagem2{
+        width: 30%;
+    }
+
+    .secundario{
+        align-items: center;
+        margin: 0 10em;
+        display: grid;
+       
+    }
+
+    .descricao__titulo{
+        font-weight: 700;
+        font-size: 48px;
+        color:var(--branco-principal);
+        margin-bottom: 0.1em;
+    }
+
+    .descricao__texto{
+        color: var(--cinza-secundario);
+    }
+
+    .secundario__botao{
+        display: inline-block;
+        margin-top: 1em;
+    }
+
+    .conteiner__descricao{
+        padding: 2em;
+    }
+    
